--- a/webpages/css/home.css
+++ b/webpages/css/home.css
@@ -813,6 +813,8 @@ div.fretStringLegend {
 .option button {
   margin-right: 2px;
 }
+
+/* audio section css */
 .audio {
   grid-area: audio;
   margin: 1vw;
@@ -824,6 +826,43 @@ div.fretStringLegend {
 .audio-btns i:hover {
   cursor: pointer;
 }
+#bpm-text {
+  width: 4vw;
+  height: 2vw;
+}
+#bpm-text:hover {
+  cursor: default;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 2vw;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+}
+.slider:hover {
+  opacity: 1;
+}
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: #a974dd;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #a974dd;
+  cursor: pointer;
+}
+
 .chords-options {
   display: grid;
   grid-template-rows: max-content;
