--- a/webpages/css/home.css
+++ b/webpages/css/home.css
@@ -41,7 +41,7 @@ body::-webkit-scrollbar-thumb,
 
 /* generic button css */
 .btn-large {
-  font-size: 1.3vw;
+  font-size: 1.2vw;
   padding: 1vw 1.3vw;
   background-color: #bb9cd9;
   border: none;
@@ -102,7 +102,7 @@ body::-webkit-scrollbar-thumb,
 }
 
 #login-err {
-  margin: 1vw;
+  margin: 1vw 0 0 0;
 }
 #login-err:hover {
   cursor: default;
@@ -225,7 +225,7 @@ input[type="checkbox"]:checked + label:before {
 .button {
   width: 80%;
   margin-top: 2vh;
-  font-size: 1.3vw;
+  font-size: 1.2vw;
   transition: background-color 0.5s linear;
 }
 .button:hover {
